kubernetes/apps/monitoring/kube-prometheus-stack/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Dashboards and metrics exploration
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - grafana.krapulax.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
