kubernetes/apps/monitoring/kube-prometheus-stack/config/prometheus-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Prometheus
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/description: PromQL queries and time-series exploration
    gethomepage.dev/href: https://prometheus.krapulax.dev/graph
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - prometheus.krapulax.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
